Setting up jwt authetication and modify navbar section

--- a/06_node_js/12_BLOG_APP/views/home.ejs
+++ b/06_node_js/12_BLOG_APP/views/home.ejs
@@ -7,7 +7,7 @@
 <body>
     <%- include('./partials/nav') %>
     
-
+    <%= JSON.stringify(user) %>
 
     <%- include('./partials/scripts') %>
 </body>
