--- a/06_node_js/12_BLOG_APP/views/partials/nav.ejs
+++ b/06_node_js/12_BLOG_APP/views/partials/nav.ejs
@@ -1,27 +1,112 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">i-Blog</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
+  <div class="container">
+    <a class="navbar-brand" href="#">i-Blog</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <% if (locals.user) { %>
           <li class="nav-item">
             <a class="nav-link" href="#">Add Blog</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Username
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="text-transform: capitalize;">
+              <%= user.username %>
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Profile</a></li>
-              <li><a class="dropdown-item" href="#">Logout</a></li>
+              <li><button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Profile</button>
+              </li>
+              <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
             </ul>
           </li>
-        </ul>
+          <% } else {%>
+            <li class="nav-item">
+              <a class="nav-link" href="/user/signin">Sign In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/user/signup">Sign Up</a>
+            </li>
+            <% } %>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<% if (locals.user) { %>
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Profile</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <section class="w-100">
+          <div class="row d-flex justify-content-center">
+            <div class="col">
+              <div class="card" style="border-radius: 15px;">
+                <div class="card-body">
+                  <div class="d-flex">
+                    <div class="flex-shrink-0">
+                      <img src="<%= user.profileImageURL %>"
+                        alt="Generic placeholder image" class="img-fluid" style="width: 180px; border-radius: 10px;">
+                    </div>
+                    <div class="flex-grow-1 ms-3">
+                      <h5 class="mb-1" style="text-transform: capitalize;">
+                        <%= user.username %>
+                      </h5>
+                      <p class="mb-2 pb-1">
+                        <%= user.email %>
+                      </p>
+                      <div class="d-flex justify-content-start rounded-3 p-2 mb-2 bg-body-tertiary">
+                        <div>
+                          <p class="small text-muted mb-1">Articles</p>
+                          <p class="mb-0">41</p>
+                        </div>
+                        <div class="px-3">
+                          <p class="small text-muted mb-1">Followers</p>
+                          <p class="mb-0">976</p>
+                        </div>
+                        <div>
+                          <p class="small text-muted mb-1">Rating</p>
+                          <p class="mb-0">8.5</p>
+                        </div>
+                      </div>
+                      <div class="d-flex pt-1">
+                        <button type="button" data-mdb-button-init data-mdb-ripple-init
+                          class="btn btn-outline-primary me-1 flex-grow-1">Chat</button>
+                        <button type="button" data-mdb-button-init data-mdb-ripple-init
+                          class="btn btn-primary flex-grow-1">Follow</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
-  </nav>
+  </div>
+</div>
+<% } %>
+
+
+<% if (locals.error) { %>
+  <div class="alert alert-warning alert-dismissible fade show position-absolute"
+    style="top: 25px; right: 25px; width: fit-content;" role="alert">
+    <strong>Error!</strong>
+    <%= error %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  <% } %>
