handel user profile image upload

--- a/06_node_js/12_BLOG_APP/views/signup.ejs
+++ b/06_node_js/12_BLOG_APP/views/signup.ejs
@@ -14,7 +14,7 @@
 
 
                 <h2 class="text-center p-2">Sign Up</h2>
-                <form method="post" action="/user/signup">
+                <form method="post" action="/user/signup" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label for="fullName" class="form-label">Full name</label>
                         <input type="text" class="form-control" id="fullName" name="fullName" required/>
@@ -23,6 +23,10 @@
                         <label for="email" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" required />
                         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="profileImage" class="form-label">Profile Image</label>
+                        <input type="file" class="form-control" id="profileImage" name="profileImage" aria-describedby="emailHelp" />
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
