--- a/06_node_js/12_BLOG_APP/views/blog.ejs
+++ b/06_node_js/12_BLOG_APP/views/blog.ejs
@@ -14,7 +14,7 @@
                 <div class="row g-0">
                     <div class="col-lg-6">
                         <img src="<%= blogWithAuthor.coverImageURL %>" alt="Trendy Pants and Shoes"
-                            class="img-fluid rounded-start" />
+                            class="img-fluid rounded-start w-100" />
                     </div>
                     <div class="col-lg-6">
                         <div class="card-body">
