--- a/06_node_js/12_BLOG_APP/views/blog.ejs
+++ b/06_node_js/12_BLOG_APP/views/blog.ejs
@@ -26,7 +26,8 @@
                             </p>
                             <p class="card-text">
                                 <span class="text-muted" style="text-transform: capitalize;">
-                                    <img src="<%= blogWithAuthor.profileImageURL %>" width="50" style="border-radius: 50%;" alt=""> 
+                                    <img src="<%= blogWithAuthor.profileImageURL %>" width="50"
+                                        style="border-radius: 50%;" alt="">
                                     <%= blogWithAuthor.author %>
                                 </span>
                             </p>
@@ -34,6 +35,50 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="container mt-3">
+            <% if (locals.user) { %>
+                <form action="/blog/comment/<%= blogWithAuthor._id %>" method="post">
+                    <div class="input-group">
+                        <input type="text" class="form-control rounded" name="content"
+                            placeholder="Enter Your Comment....." required />
+                        <button type="submit" class="btn btn-outline-primary" data-mdb-ripple-init>ADD</button>
+                    </div>
+                </form>
+                <% } %>
+                    <h3 class="my-2">Comments</h3>
+                    <div class="my-4 text-body">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-md-12 col-lg-10 col-xl-8">
+                                <% if (comments.length> 0) {
+                                    comments.forEach(comment => { %>
+                                    <div class="card mb-3">
+                                        <div class="card-body">
+                                            <div class="d-flex flex-start">
+                                                <img class="rounded-circle shadow-1-strong me-3"
+                                                    src="<%= comment.createdBy.profileImageURL %>" alt="avatar"
+                                                    width="40" height="40" />
+
+                                                <div class="row w-100">
+                                                    <h6 class="text-primary fw-bold mb-0 col-md-10">
+                                                        <%= comment.createdBy.fullName %> :
+                                                            <span class="text-body ms-2">
+                                                                <%= comment.content %>
+                                                            </span>
+                                                    </h6>
+                                                    <p class="mt-2 mb-0 mt-md-0 col-md-2 ">2 days ago</p>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <% }) } else { %>
+                                        <h3 class="text-center mt-2">Be the first one to comment</h3>
+                                        <% } %>
+                            </div>
+                        </div>
+                    </div>
         </div>
 
         <%- include('./partials/scripts') %>
